Web Inspector: Profiler: Fix overlapping data in function names column. https://bugs.webkit.org/show_bug.cgi?id=67896
Reviewed by Pavel Feldman.

* inspector/front-end/ProfileDataGridTree.js:
(WebInspector.ProfileDataGridNode.prototype.createCell):
* inspector/front-end/dataGrid.css:
(.data-grid table.data):
(.data-grid td):

Canonical link: https://commits.webkit.org/83911@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95027 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebCore/inspector/front-end/dataGrid.css
+++ b/Source/WebCore/inspector/front-end/dataGrid.css
@@ -73,6 +73,7 @@
     border-top: 0 none transparent;
     background-image: -webkit-gradient(linear, left top, left bottom, from(white), color-stop(0.5, white), color-stop(0.5, rgb(234, 243, 255)), to(rgb(234, 243, 255)));
     -webkit-background-size: 1px 32px;
+    table-layout: fixed;
 }
 
 .data-grid.inline table.data {
@@ -93,6 +94,7 @@
     line-height: 12px;
     padding: 2px 4px;
     white-space: nowrap;
+    overflow: hidden;
     border-right: 1px solid #aaa;
     -webkit-user-select: text;
 }
